fix: Change z-index to stay above home image on smaller displays

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -40,6 +40,7 @@ li {
 	color: rgb(1, 49, 49);
 	position: relative;
 	cursor: pointer;
+	z-index: 1;
 }
 
 .headerLinks::after {
